# hackathon2026-saikiranpulagalla

./: .env.example  .gitignore  Dockerfile  README.md  audit_log.json  check_audit.py  conftest.py  dlq.json  docker-compose.yml  failure_modes.md  live_tab.py  pyproject.toml  requirements.txt  smoke_test.py  streamlit_app.py  take_screenshots.py  term.html  test_async.py
data/: customers.json  golden_answers.json  tickets.json
src/: __init__.py  __main__.py  main.py
src/agent/: __init__.py  graph.py  nodes.py  router.py  state.py
src/evaluation/: __init__.py  confidence.py  metrics.py
src/infrastructure/: __init__.py  audit.py  dlq.py
src/tools/: __init__.py  exceptions.py  mock_tools.py  retry.py  schemas.py
tests/property/: test_properties.py
tests/unit/: test_retry.py  test_router.py  test_tools.py
